server_error.log
   Compiling server v0.1.0 (/home/y4my4m/gits/ai/cyberpunk_bbs/server)
error[E0728]: `await` is only allowed inside `async` functions and blocks
   --> server/src/main.rs:775:94
    |
750 |     tokio::task::spawn_blocking(move || {
    |                                 ------- this is not `async`
...
775 |                 let author_profile = db_get_user_profile(Uuid::parse_str(&user_id).unwrap()).await.map_err(|e| e.to_string())?;
    |                                                                                              ^^^^^ only allowed inside `async` functions and blocks

error[E0728]: `await` is only allowed inside `async` functions and blocks
   --> server/src/main.rs:802:104
    |
750 |     tokio::task::spawn_blocking(move || {
    |                                 ------- this is not `async`
...
802 |                     let post_author_profile = db_get_user_profile(Uuid::parse_str(&puser_id).unwrap()).await.map_err(|e| e.to_string())?;
    |                                                                                                        ^^^^^ only allowed inside `async` functions and blocks

error[E0063]: missing fields `cover_banner` and `profile_pic` in initializer of `common::User`
   --> server/src/main.rs:154:57
    |
154 | ...                   current_user = Some(User {
    |                                           ^^^^ missing `cover_banner` and `profile_pic`

error[E0308]: mismatched types
   --> server/src/main.rs:357:46
    |
357 | ...                   profile_pic: "",
    |                                    ^^ expected `Option<String>`, found `&str`
    |
    = note:   expected enum `Option<std::string::String>`
            found reference `&'static str`

error[E0308]: mismatched types
   --> server/src/main.rs:358:47
    |
358 | ...                   cover_banner: "",
    |                                     ^^ expected `Option<String>`, found `&str`
    |
    = note:   expected enum `Option<std::string::String>`
            found reference `&'static str`

error[E0560]: struct `common::User` has no field named `hash`
   --> server/src/main.rs:530:13
    |
530 |             hash: String::new(), // Do not send password hash to client
    |             ^^^^ `common::User` does not have this field
    |
    = note: all struct fields are already assigned

error[E0609]: no field `10` on type `(String, String, String, String, String, Option<String>, Option<...>)`
   --> server/src/main.rs:537:31
    |
537 |             profile_pic: user.10,
    |                               ^^ unknown field
    |
    = note: the full name for the type has been written to '/home/y4my4m/gits/ai/cyberpunk_bbs/target/release/deps/server-9207bc9dfa8c3be8.long-type-6656793461176570862.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0609]: no field `11` on type `(String, String, String, String, String, Option<String>, Option<...>)`
   --> server/src/main.rs:538:32
    |
538 |             cover_banner: user.11,
    |                                ^^ unknown field
    |
    = note: the full name for the type has been written to '/home/y4my4m/gits/ai/cyberpunk_bbs/target/release/deps/server-9207bc9dfa8c3be8.long-type-6656793461176570862.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0308]: mismatched types
   --> server/src/main.rs:514:5
    |
514 | /     task::spawn_blocking(move || {
515 | |         let conn = Connection::open(DB_PATH).map_err(|e| e.to_string())?;
516 | |         let mut stmt = conn.prepare("SELECT id, username, password_hash, color, role FROM users WHERE id = ?1").map_err(|e| e.to_string())?;
517 | |         let user = stmt.query_row(params![user_id], |row| {
...   |
539 | |         })
540 | |     }).await.unwrap()
    | |_____________________^ expected `Result<UserProfile, String>`, found `Result<User, _>`
    |
    = note: expected enum `Result<UserProfile, std::string::String>`
               found enum `Result<common::User, _>`

Some errors have detailed explanations: E0063, E0308, E0560, E0609, E0728.
For more information about an error, try `rustc --explain E0063`.
error: could not compile `server` (bin "server") due to 9 previous errors
